--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
     <div id="recipes"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 
   <script>
     // Load seasonal ingredients from backend
@@ -209,4 +209,5 @@
     loadSeasonalIngredients();
   </script>
 </body>
+
 </html>
